crates/reinhardt-core/macros/tests/ui/newtype/fail/delegatable_assoc_type.stderr
error: #[delegatable] cannot forward traits with required associated type items; wrap `Storage` manually or provide a default value
 --> tests/ui/newtype/fail/delegatable_assoc_type.rs:8:7
  |
8 |     type Key;
  |          ^^^
